=== Feb 03 ===
+ Some changes reflecting upon latest requests and blackbox
+ #!/usr/bin/python2 -> #!/usr/bin/env python
+ Removed lock from Plinko.py and turned it into CommandLock.py to be shared.
=== Jan 12 ===
+ @help/@plugins command and helpstrings
=== Jan 09 ===
+ Changes to the regex in Plugins/Tinyboard.py
+ Added Plugins/Fapget.py
+ Added Plugins/Wikipedia.py
=== Jan 03 ===
+ Fixed bugs in Plugins/Imgur.py
=== Dec 22 ===
+ Added HipsterMemes, silly automeme.net.
+ Changed the parser. Now it actually /works/ how I want it to.
=== Dec 11 ===
+ Added Plugins/Slap.py
+ Added flood protection and prizes to Plugins/Plinko.py
=== Dec 06 ===
+ Plugins/Plinko.py
=== Dec 03 ===
+ Created a ./docs and moved some files to it.
+ Moved Users.py and Allowed.py to ./Services
+ Edited YouTube regex because people like to link w/o 'http://' >_>
+ Finished Stats for GuessingGame.py
+ GuessingGame.py and now Allowed.py call their Save() functions when something is added.
+ Edits reflecting upon the above (File path corrections, renamed some functions)
=== Dec 01 ===
+ Plugins now take the non-optional 'users' and 'allowed' in the called functions
	+'users' is an Users.Users() object that holds the userlist for each channel.
	+'allowed' is an Allowed.Users() object that holds access levels, allowing each 
		plugin to 'bypass' set access levels.
+ A Services folder, used for network Services like NickServ and HostServ
+ Optional NickServ pass on start.
+ Plugins/Misc.py Hug() fixed.
+ Changes to Plugins/Tinyboard.py regarding some Tinyboard updates.
+ A '@cmdedit' command that allows editing command access level requirements on the fly
+ Core.py and WhergBot.py have changes that m ake the bot start better.
+ Dictionary.py to define words.
+ Small edits to NickServ.py
+ Asl.py now reads a textfile of places.
+ Added a new plugin, GuessingGame.py, starts automatically, guess away.
=== Nov 18 ===
+ Fixed a bug in the Parser
+ FuckMyLife Plugin
+ Some other small fixes